# musedetect

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/: example_medleydb.ipynb  example_medleydb_multinet.ipynb
musedetect/data/: __init__.py  medleydb.py  preprocess.py  preprocess_transforms.py  transforms.py  utils.py
musedetect/eval/: __init__.py  metrics.py
musedetect/models/: __init__.py  cnn.py
musedetect/training/: __init__.py  loss.py  train.py  utils.py
