[tool.poetry]
name = "musedetect"
version = "0.1.0"
description = "A package to facilitate instrument detection"
authors = [
    "Dylan Sechet",
    "Agathe Gioan",
    "Xavier Jeunot",
    "Aaron Broderick",
    "Edouard d'Hérouville",
]
license = ""
readme = "README.md"
packages = [{ include = "musedetect" }]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.64.1"
numpy = "^1.23.5"
seaborn = "^0.12.1"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
joblib = "^1.2.0"
medleydb-instruments = "^1.0.1"
rich = "10.12.0"
torch = "^2.0.0"
torchaudio = "^2.0.1"
torchvision = "^0.15.1"
torchmetrics = "^0.11.4"
tensorboard = "^2.12.0"
torch-tb-profiler = "^0.4.1"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pylint = "^2.17.1"
ruff = "^0.0.260"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
ignore-init-module-imports = true
extend-select = ["I"]

[tool.pylint.GENERAL]
disable = """
    too-few-public-methods,
    duplicate-code,
    logging-fstring-interpolation,
    too-many-instance-attributes,
    missing-module-docstring,
    missing-function-docstring,
    missing-module-docstring,
    missing-class-docstring,
    too-many-arguments,
    inconsistent-return-statements,
    too-many-ancestors,
    too-many-locals,
    unspecified-encoding,
    fixme,
    unnecessary-pass
    """

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.BASIC]
good-names = "i,j,df,x,y,X"

[tool.pylint.TYPECHECK]
# List of members which are set dynamically and missed by Pylint inference
# system, and so shouldn't trigger E1101 when accessed.
generated-members = "numpy.*, torch.*"
